--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: Information Technology
+  uni: Columbia Southern University
+  year: Oct 2017 - January 2019
+  # awards: A degree yo
+  # summary:I did awesome.
